--- a/IsaacGym_Preview_4_Package/isaacgym/python/rlgpu_conda_env.yml
+++ b/IsaacGym_Preview_4_Package/isaacgym/python/rlgpu_conda_env.yml
@@ -4,10 +4,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7
-  - pytorch=1.8.1
-  - torchvision=0.9.1
-  - cudatoolkit=11.1
+  - python=3.8
+  - numpy=1.20
+  # - pytorch=1.8.1
+  # - torchvision=0.9.1
+  # - cudatoolkit=11.1
   - pyyaml>=5.3.1
   - scipy>=1.5.0
   - tensorboard>=2.2.1
